compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_arithmetic_wrong_types-9.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 + true

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..21 }, state: Error(ConstError { kind: WrongOperandType, span: Span { file: None, range: 15..16 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(4))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: WrongOperandType, span: Span { file: None, range: 15..16 } }

error at 15..16: wrong type for compile-time expression

